// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should render correctly 1`] = `
<Link
  href={
    Object {
      "pathname": "test",
    }
  }
>
  Click me
</Link>
`;

exports[`<Link /> should render correctly with mock 1`] = `
<Link
  href={
    Object {
      "pathname": "test",
      "query": Object {
        "mock": "mock1",
        "other": "value",
      },
    }
  }
>
  Click me
</Link>
`;
